# metaTopoGraph

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  analyze.py  features.json  plot_features.py  pull_and_extract.py  why_important
src/: README.md  error_threshold_derivation.md  main.cpp  topo_extractor.cpp  topo_extractor.h  topo_features.h  topo_json_writer.cpp  topo_json_writer.h
